--- a/src/Header.css
+++ b/src/Header.css
@@ -10,13 +10,16 @@
 }
 
 .header {
-  background-color: #282c34;
+  /*background-color: #282c34;*/
   max-height: 10vh;
+  width: 100vw;
   display: flex;
   flex-direction: row;
   align-items: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  position: fixed;
+  backdrop-filter: blur(10px);
 }
 
 .header-link {
