Paar Animationen zum Testen

--- a/src/App.css
+++ b/src/App.css
@@ -1,76 +1,3 @@
-.App {
-
-}
-
-.Content-container{
-
-}
-
-.App-intro {
-    background-color: #ECECEC;
-    min-height: 100vh;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    color: #262626;
-    /*padding: 10vh;*/
-}
-
-.App-Kapitel-1 {
-    background-color: #FFFFFF;
-    height: 100vh;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    color: #262626;
-}
-
-.App-Kapitel-2 {
-    background-color: #424242;
-    height: 100vh;
-    display: grid;
-    color: #ECECEC;
-    justify-content: center;
-    align-items: center;
-}
-
-.App-Kapitel-3 {
+body {
     background-color: #262626;
-    height: 100vh;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    color: #ECECEC;
-}
-
-.App-Kapitel-4 {
-    background-color: #194673;
-    height: 100vh;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    color: #ECECEC;
-}
-
-.App-Kapitel-5 {
-    background-color: #2A75BF;
-    height: 100vh;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    color: #ECECEC;
-}
-
-.App-Kapitel-6 {
-    background-color: #3491ED;
-    height: 100vh;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    color: #ECECEC;
-}
-
-h1 {
-    font-size: 3rem;
-    font-family: "Roboto Black", sans-serif;
 }
