--- a/src/Header.css
+++ b/src/Header.css
@@ -10,17 +10,28 @@
 }
 
 .header {
-  /*background-color: #282c34;*/
   max-height: 10vh;
   width: 100vw;
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
   color: white;
   position: fixed;
-  backdrop-filter: blur(10px);
-  z-index: 10;
+  backdrop-filter: blur(20px);
+  z-index: 2;
+}
+
+.header-group-left {
+  display: flex;
+  align-items: center;
+}
+
+.header-group-right{
+  display: flex;
+  gap: 30px;
+  padding-right: 20px;
 }
 
 .header-link {
