--- a/src/ScrollAnimation.css
+++ b/src/ScrollAnimation.css
@@ -1,14 +1,13 @@
 .scrollAnimation {
     width: 100%;
     height: 100%;
-    font-size: 3rem;
-    font-family: "Roboto Black", sans-serif;
+    padding-top: 150px;
 }
 
 main {
     display: grid;
     justify-content: center;
-    gap: 50px;
+    gap: 200px;
     overflow: hidden;
 }
 
@@ -23,6 +22,9 @@ main div {
     height: 100%;
     width: 100%;
     padding: 5px;
+
+    font-size: 3rem;
+    font-family: "Roboto Black", sans-serif;
 }
 
 .image-container {
