--- a/src/ScrollAnimation.css
+++ b/src/ScrollAnimation.css
@@ -1,10 +1,12 @@
 .scrollAnimation {
+
     width: 100%;
     height: 100%;
     padding-top: 150px;
 }
 
 main {
+
     display: grid;
     justify-content: center;
     gap: 200px;
@@ -15,16 +17,16 @@ main div {
     display: grid;
     justify-content: center;
     align-items: center;
-    border-radius: 10px;
+    border-radius: 8px;
     transition: all ease-in 1s;
-    background-color: #61dafb;
     text-align: center;
     height: 100%;
-    width: 100%;
+    width: 90vw;
     padding: 5px;
 
     font-size: 3rem;
     font-family: "Roboto Black", sans-serif;
+
 }
 
 .image-container {
@@ -32,6 +34,7 @@ main div {
     justify-content: center;
     align-items: center;
     max-height: 80%; /* Maximale Höhe des Bildes in dem Container */
+
 }
 
 img {
@@ -49,7 +52,7 @@ img {
 }
 
 .slide-out {
-    transform: translateX(50%);
+    transform: translateX(10%);
     opacity: 0;
 }
 
