--- a/src/App.css
+++ b/src/App.css
@@ -33,9 +33,7 @@ body::-webkit-scrollbar {
 }
 
 body {
-    cursor: url("cursor.svg"),
-    auto;
-
+    cursor: url("cursor.svg"), auto;
     background-color: #262626;
 }
 
