--- a/src/Components/LoadingContainer.css
+++ b/src/Components/LoadingContainer.css
@@ -1,10 +1,14 @@
 /* Stile für die LoadingContainer-Komponente */
 
+.hero-section{
+    height: 100vh;
+
+}
 
 .loading-container {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: 100vw;
     z-index: 1; /* Higher z-index to be in the foreground */
 }
 
@@ -40,15 +44,14 @@
 
 .canvas-container {
     position: relative;
-    width: 100%;
-    height: 100vh; /* or set it to a specific height like 500px */
+    height: 100%;
 }
 
 canvas {
     animation: fadeIn 1s ease-out 0.8s forwards;
     position: absolute;
+    right: 0;
     top: 0;
-    left: 0;
     width: 100% !important;
     height: 100% !important;
     z-index: 0; /* Lower z-index to be in the background */
