Die Chapters sind jetzt responsive! -> Die Topics sind jetzt berechnet anhand der größe des Fenster -> Font-size der Texte sind ebenfalls berechnet
WICHTIG:
- Padding für den Content auf der Webseite muss noch eingefügt werden

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body::-webkit-scrollbar {
 }
 
 body {
-    cursor: url("cursor.svg"), auto;
+    /*cursor: url("cursor.svg"), auto;*/
     background-color: #262626;
     margin: 0;
     padding: 0;
